# eightyeighty

./: .gitignore  Cargo.toml  README.md
emulator/: Cargo.toml
emulator/src/: lib.rs  main.rs
emulator/src/cpu/: mod.rs
emulator/src/machines/: mod.rs
emulator/src/machines/spaceinvaders/: mod.rs  sdl.rs  web.rs
src/: cpu.rs  emulator.rs  machine.rs  main.rs
src/cpu/: mod.rs
src/machines/: mod.rs
src/machines/spaceinvaders/: mod.rs
web/: Cargo.toml  LICENSE_MIT  index.html
web/pkg/: package.json  web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
web/src/: lib.rs
